2004-10-18  Andras Varga

	* usability improvement: allowed user interactions during message
	animation (speed can be changed, STOP button can be clicked, inspector
	can be closed, etc). In Tcl-speak: changed "update idletasks" to
	"update" within animation code (graphmodwin_do_animate, etc).

	* tkinsp2.tcl: animation changed to use [clock clicks]-based timing

2004-10-15  Andras Varga

	* modinsp2.tcl, tkcmd.cc: fixed display strings: didn't handle "," and 
	"=" in args to "t=" properly

	* tkapp.cc: improved "Fast Run until next local event" function: now
	it always animates events occurring in the local module

2004-10-15  Andras Varga

	* window.tcl: fix: "View file" option didn't like some file names

2004-10-10  Andras Varga

	* inspector.cc, tkutil.cc/h: fix: label always displayed "0 objects" 
	above inspector listboxes; refactoring

2004-10-10  Andras Varga

	* main.tcl: changed default "Run until" run mode to Express (was Normal)

2004-10-04  ------ omnetpp-3.0a8 released ------

2004-09-27  Andras Varga

        * inspector.cc: display class name too on "inspect" buttons 
        (e.g. "encapsulated message" button in cMessage inspector)

2004-09-26  Andras Varga

        * modinsp2.tcl: graphical module windows: adjust window size to fit 
        size of graphics

2004-09-24  ------ omnetpp-3.0a7 released ------

2004-09-08  Andras Varga

        * widgets.tcl: updated Tcl/Tk version check

2004-08-16  Andras Varga

        * tkutil.cc: worked around compilation error in WinSCard.h when 
        compiling with MSVC .NET

2004-08-14  Andras Varga

        * tkapp.cc: new omnetpp.ini entry: [Tkenv]/bitmap-path=. Value should
        be quoted; directories should be separated by ";". The contents of the
        OMNETPP_BITMAP_PATH environment var (or if that's not set, the 
        compilation-time bitmap path) gets concatenated to this one.
        Beware: if you don't quote the value, only the first dir will be